adjusting small screen visual layout

--- a/TODO
+++ b/TODO
@@ -1,2 +1,24 @@
 TODO
 
+basic app instructions
+
+
+Setup
+------
+Run from your command line:
+```
+git clone <CLONE_URL_FROM_GITHUB_PAGE>
+cd XXXXXXXXXXXXXX
+npm install
+```
+If the npm install will not run without errors try:
+```
+sudo npm install
+```
+If you do not have supervisor, [install supervisor](https://github.com/isaacs/node-supervisor).
+```
+supervisor app
+```
+The app should now be running at localhost:XXXX
+
+
